style.css
.blue-bar{
  background-color: navy;
  border: 5px solid black;
}
.text-center{
  text-align: center;
}
.white{
  color:white;
}
.block{
  display: inline-block;
}
.smaller-div{
  margin-left: auto;
  margin-right: auto;
}
.right{
 float: right; 
}
#grey-block{
  height: 15px;
  width:325px;
  color: grey;
  background-color: grey;
}

#wrapper {
  display: flex;
}

#left {
  flex: 0 0 65%;
}

#right {
  float: right;
}

.footer{
  height: 15vh;
  width: 100vw;
  position: fixed;
  bottom: 0;
}
.smaller-p{
  width:325px;
  margin-left: auto;
  margin-right: auto; 
  text-align: left;
}
.cut-off{
  height: 10vh;
  text-overflow: ellipsis;
  overflow: hidden;
}

